# smcv

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml
ai_context_documentation/: API_DESIGN.md  AUTHORITATIVE_REFERENCES.md  AUTHORIZATION_MODEL.md  BACKUP_AND_RECOVERY.md  CRYPTOGRAPHY_AND_KEY_MANAGEMENT.md  DATA_MODEL.md  DECISION_REGISTER.md  DEPENDENCY_AND_UNSAFE_REVIEW.md  GLOSSARY.md  OPERATIONS_AND_SECURITY.md  PHASE_0_TECHNICAL_DECISIONS.md  PORTABLE_ARCHIVE_FORMAT_V1.md  PRODUCT_REQUIREMENTS.md  PROJECT_CHARTER.md  README.md  RESIDUAL_RISK_REGISTER.md  SECURITY_ASSURANCE.md  SYSTEM_ARCHITECTURE.md  THREAT_AND_TRUST_MODEL.md
ai_context_documentation/reviews/: FINAL_INTERNAL_ASSURANCE.md  OPERABILITY_SCOPE_RECOVERY_REVIEW.md  PHASE_1_ADVERSARIAL_REVIEW.md  PHASE_2_ADVERSARIAL_REVIEW.md  PHASE_3_ADVERSARIAL_REVIEW.md  PHASE_4_ADVERSARIAL_REVIEW.md  PHASE_5_ADVERSARIAL_REVIEW.md  REVIEW_RESOLUTION_LOG.md  SECURITY_ADVERSARIAL_REVIEW.md  TEN_PASS_ADVERSARIAL_REVIEW.md
ai_design_guidelines/: ACCESSIBILITY.md  CONTENT_AND_TRUST_LANGUAGE.md  CRITICAL_USER_FLOWS.md  PRODUCT_DESIGN_SYSTEM.md  README.md
ai_phase_evidence/: CONTINUOUS_IMPLEMENTATION_AMENDMENT.md  DOCUMENTATION_FOUNDATION.md  FINAL_ACCESSIBILITY_CONFORMANCE.md  FINAL_REQUIREMENTS_TRACEABILITY.md  PHASE_0_EXIT_REPORT.md  PHASE_1_EXIT_REPORT.md  PHASE_2_EXIT_REPORT.md  PHASE_2_PERMISSION_MATRIX.md  PHASE_3_EXIT_REPORT.md  PHASE_4_ACCESSIBILITY_REPORT.md  PHASE_4_EXIT_REPORT.md  PHASE_5_EXIT_REPORT.md  PHASE_5_OPERATIONS_REPORT.md  PHASE_6_EXIT_REPORT.md  README.md
ai_phase_evidence/phase_4_browser/: browser-smoke.json  screen-reader-smoke.json
ai_phased_plans/: IMPLEMENTATION_READINESS.md  PHASE_00_FOUNDATIONS.md  PHASE_01_CRYPTO_STORAGE.md  PHASE_02_IDENTITY_AUTHZ_API.md  PHASE_03_BACKUP_RECOVERY.md  PHASE_04_WEB_UI.md  PHASE_05_OPERATIONS.md  PHASE_06_RELEASE_READINESS.md  PHASE_TEMPLATE.md  README.md  REQUIREMENTS_TRACEABILITY.md
api/: openapi.yaml
crates/smcv-app/: Cargo.toml
crates/smcv-app/examples/: generate_v1_fixture.rs
crates/smcv-app/src/: authentication.rs  authorization.rs  authorized_vault.rs  backup.rs  initialization.rs  lib.rs  passkeys.rs  rotation.rs  service_identity.rs  vault_core.rs
crates/smcv-backup/: Cargo.toml
crates/smcv-backup/fixtures/: README.md  v1-minimal.smcvault
crates/smcv-backup/src/: lib.rs
crates/smcv-cli/: Cargo.toml
crates/smcv-cli/recovery_web/: app.js  index.html  styles.css
crates/smcv-cli/src/: main.rs  operations.rs  recovery_web.rs
crates/smcv-core/: Cargo.toml
crates/smcv-core/src/: authorization.rs  error.rs  ids.rs  lib.rs  lifecycle.rs  ports.rs  secret.rs
crates/smcv-crypto/: Cargo.toml
crates/smcv-crypto/src/: lib.rs
crates/smcv-server/: Cargo.toml
crates/smcv-server/examples/: export_openapi.rs
crates/smcv-server/src/: backup_jobs.rs  lib.rs  main.rs  operations.rs  web.rs
crates/smcv-server/web/: api.js  app.js  index.html  styles.css
crates/smcv-storage/: Cargo.toml
crates/smcv-storage/src/: authorization.rs  idempotency.rs  identity.rs  lib.rs  portable.rs  records.rs  rotation.rs  vault.rs
docs/: RELEASE_NOTES_0.1.0.md  SUPPORTED_PLATFORMS.md
docs/operations/: BACKUP_AND_RECOVERY_OPERATIONS.md  DEPLOYMENT.md  INCIDENT_RUNBOOKS.md  RELEASES.md  TABLETOP_EXERCISES.md  TELEMETRY_AND_CAPACITY.md  UPGRADE_AND_ROLLBACK.md
external_assurance/: README.md
human_tasks/: HT-001-independent-security-assurance.md  HT-002-real-recovery-custody-exercise.md  HT-003-signing-publication-and-deployment.md  README.md
packaging/: README.md  nginx-smcv.conf.example  smcv.env.example
packaging/systemd/: smcv-backup.service  smcv-backup.timer  smcv.service
scripts/: browser-smoke.mjs  build-release.sh  check.sh  final-release-gate.sh  operations-smoke.sh  release-candidate-smoke.sh  release-verifier-smoke.sh  verify-release.sh
