[workspace]
members = [
    "crates/smcv-app",
    "crates/smcv-backup",
    "crates/smcv-cli",
    "crates/smcv-core",
    "crates/smcv-crypto",
    "crates/smcv-server",
    "crates/smcv-storage",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false

[workspace.dependencies]
argon2 = { version = "0.5.3", default-features = false, features = ["alloc", "password-hash", "rand", "std", "zeroize"] }
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "matched-path", "multipart", "query", "tokio", "tracing"] }
base64 = "0.22.1"
chacha20poly1305 = { version = "0.11.0", features = ["zeroize"] }
clap = { version = "4.6.4", features = ["derive"] }
getrandom = "0.4.3"
hex = "0.4.3"
hmac = { version = "0.13.0", features = ["zeroize"] }
libc = "0.2.189"
proptest = "1.11.0"
# 0.40.1's bundled build currently invokes unstable `std::cfg_select!` on
# stable Rust. Keep the last stable-compatible release until upstream repairs it.
rusqlite = { version = "=0.39.0", default-features = false, features = ["backup", "bundled", "limits"] }
rpassword = "=7.5.4"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.149"
sha2 = { version = "0.11.0", features = ["zeroize"] }
subtle = "2.6.1"
tempfile = "3.27.0"
thiserror = "2.0.19"
tokio = { version = "1.53.1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }
tokio-util = { version = "0.7.19", features = ["io"] }
tower-http = { version = "0.7.0", features = ["fs", "request-id", "trace"] }
tower = { version = "0.5.3", features = ["limit", "util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
unicode-normalization = "0.1.25"
uuid = { version = "1.24.0", features = ["serde", "v4"] }
webauthn-rs = { version = "=0.5.4", default-features = false }
zeroize = { version = "1.9.0", features = ["derive", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"

[profile.dev]
overflow-checks = true

[profile.release]
codegen-units = 1
incremental = false
lto = "thin"
overflow-checks = true
panic = "abort"
strip = "debuginfo"

[profile.test]
overflow-checks = true
