[package]
name = "smcv-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
argon2.workspace = true
base64.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
smcv-core = { version = "=0.1.0", path = "../smcv-core" }
smcv-crypto = { version = "=0.1.0", path = "../smcv-crypto" }
smcv-storage = { version = "=0.1.0", path = "../smcv-storage" }
thiserror.workspace = true
unicode-normalization.workspace = true
webauthn-rs.workspace = true

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true

[lints]
workspace = true
