[package]
name = "smcv-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
base64.workspace = true
chacha20poly1305.workspace = true
getrandom.workspace = true
hmac.workspace = true
libc.workspace = true
sha2.workspace = true
smcv-core = { version = "=0.1.0", path = "../smcv-core" }
subtle.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
hex.workspace = true
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
