[package]
name = "smcv-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
smcv-app = { version = "=0.1.0", path = "../smcv-app" }
smcv-backup = { version = "=0.1.0", path = "../smcv-backup" }
smcv-core = { version = "=0.1.0", path = "../smcv-core" }
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
webauthn-rs.workspace = true
zeroize.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
