[package]
name = "smcv-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
hex.workspace = true
rusqlite.workspace = true
sha2.workspace = true
smcv-core = { version = "=0.1.0", path = "../smcv-core" }
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
